[gd_scene load_steps=10 format=3 uid="uid://42v35pmaar3w"]

[ext_resource type="Script" path="res://traps/DragonGargoyle.gd" id="1_teck1"]
[ext_resource type="Texture2D" uid="uid://c7mom37ybdjqq" path="res://sprites/traps/DragonGargoyle/DragonGargoyle.png" id="2_bjwvy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acs4f"]
size = Vector2(96, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_abx6v"]
atlas = ExtResource("2_bjwvy")
region = Rect2(232, 0, 116, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wi80"]
atlas = ExtResource("2_bjwvy")
region = Rect2(116, 0, 116, 115)

[sub_resource type="SpriteFrames" id="SpriteFrames_eayo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abx6v")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wi80")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5iku"]
size = Vector2(320, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2l87"]
atlas = ExtResource("2_bjwvy")
region = Rect2(0, 0, 116, 115)

[sub_resource type="SpriteFrames" id="SpriteFrames_7vxa3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2l87")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="DragonGargoyle" type="CharacterBody2D"]
script = ExtResource("1_teck1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 36)
shape = SubResource("RectangleShape2D_acs4f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_eayo0")
animation = &"attack"

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2(-6, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-210, -13.5)
shape = SubResource("RectangleShape2D_g5iku")

[node name="Flame" type="AnimatedSprite2D" parent="PlayerDetection"]
visible = false
position = Vector2(-110, -9)
sprite_frames = SubResource("SpriteFrames_7vxa3")

[node name="Flame" type="AnimatedSprite2D" parent="PlayerDetection/Flame"]
position = Vector2(-111, 0)
sprite_frames = SubResource("SpriteFrames_7vxa3")

[node name="Flame" type="AnimatedSprite2D" parent="PlayerDetection/Flame/Flame"]
position = Vector2(-108, 0)
sprite_frames = SubResource("SpriteFrames_7vxa3")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
